[package]
name = "amm"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "amm"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1" }
spl-token = "6.0.0"
getrandom = { version = "0.2.15", features = ["custom"] }
solana-program = "2.0.5"
winnow="=0.4.1"
toml_datetime = "0.6.8"
constant-product-curve = { git = "https://github.com/deanmlittle/constant-product-curve.git" }


